tests/ui/type-alias-impl-trait/non-defining-method.stderr
error[E0792]: non-defining opaque type use in defining scope
  --> $DIR/non-defining-method.rs:16:17
   |
LL |     fn foo() -> Self::Bar<u32> {}
   |                 ^^^^^^^^^^^^^^ argument `u32` is not a generic parameter
   |
note: for this opaque type
  --> $DIR/non-defining-method.rs:15:19
   |
LL |     type Bar<T> = impl Sized;
   |                   ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0792`.
